# truthhain

./: .dockerignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  netlify.toml  package-lock.json  package.json  tsconfig.json
backend/: Dockerfile.backend  main.py  requirements.txt
backend/models/: document.py
backend/services/: ai_analyzer.py  hasher.py  ocr.py  solana_client.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Analytics.tsx  CATSTracker.tsx  Documentation.tsx  DragDropVerifier.tsx  MetadataExplorer.tsx
frontend/src/styles/: index.css
programs/truth_chain/: Cargo.toml
programs/truth_chain/src/: lib.rs
tests/: truth_chain.ts
