[package]
name = "truth-chain"
version = "0.1.0"
description = "Immutable document hash registry for Truth Chain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "truth_chain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
